add consultation handler
