# docs/swagger.yaml
@@ -16,6 +16,38 @@ definitions:
       name:
         type: string
     type: object
+  model.Consultation:
+    properties:
+      consult_topic_id:
+        type: integer
+      control_type_id:
+        type: integer
+      date:
+        type: string
+      is_confirmed:
+        type: boolean
+      is_need_letter:
+        type: boolean
+      nadzor_organ_id:
+        type: integer
+      question:
+        type: string
+      time:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  model.Consultations:
+    properties:
+      active:
+        items:
+          $ref: '#/definitions/model.Consultation'
+        type: array
+      finished:
+        items:
+          $ref: '#/definitions/model.Consultation'
+        type: array
+    type: object
   model.ControlType:
     properties:
       consult_topics:
@@ -59,6 +91,15 @@ definitions:
       name:
         type: string
     type: object
+  model.Slot:
+    properties:
+      date:
+        type: string
+      id:
+        type: integer
+      time:
+        type: string
+    type: object
   model.TypeList:
     properties:
       nadzor_organs:
@@ -81,6 +122,96 @@ info:
   title: Hack2023
   version: "1.0"
 paths:
+  /v1/consultation:
+    get:
+      description: список активных и завершенных консультаций
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Consultations'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ResponseError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ResponseError'
+      security:
+      - ApiKeyAuth: []
+      summary: список активных и завершенных консультаций
+      tags:
+      - consultation
+    post:
+      description: записаться на консультацию
+      parameters:
+      - description: id надзорного органа
+        in: formData
+        minimum: 1
+        name: nadzor_organ_id
+        required: true
+        type: integer
+      - description: id типа контроля
+        in: formData
+        minimum: 1
+        name: control_type_id
+        required: true
+        type: integer
+      - description: id темы консультации
+        in: formData
+        minimum: 1
+        name: consult_topic_id
+        required: true
+        type: integer
+      - description: id пользователя
+        in: formData
+        minimum: 1
+        name: user_id
+        required: true
+        type: integer
+      - description: время в формате '03:00'
+        in: formData
+        name: time
+        required: true
+        type: string
+      - description: дата в формате '2006-02-01'
+        in: formData
+        name: date
+        required: true
+        type: string
+      - description: вопрос в свободной форме
+        in: formData
+        name: question
+        required: true
+        type: string
+      - description: нужно ли письменное разъяснение
+        in: formData
+        name: is_need_letter
+        required: true
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.Consultation'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ResponseError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ResponseError'
+      security:
+      - ApiKeyAuth: []
+      summary: записаться на консультацию
+      tags:
+      - consultation
   /v1/login:
     post:
       description: Получение токена авторизации
@@ -115,6 +246,31 @@ paths:
       summary: Получение токена авторизации
       tags:
       - auth
+  /v1/slot:
+    get:
+      description: список доступных слотов
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Slot'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ResponseError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ResponseError'
+      security:
+      - ApiKeyAuth: []
+      summary: список доступных слотов
+      tags:
+      - consultation
   /v1/token:
     post:
       description: Получение токена авторизации по refresh токену
