# internal/app/server/consultation.go
@@ -2,6 +2,7 @@ package server
 
 import (
 	"database/sql"
+	"hack2023/internal/app/model"
 	"log"
 	"net/http"
 
@@ -64,7 +65,7 @@ func (s *server) getSlotList(c echo.Context) error {
 // @Tags consultation
 // @Description список активных и завершенных консультаций
 // @Produce json
-// @Success 200 {object} model.Consultatios
+// @Success 200 {object} model.Consultations
 // @Failure 400 {object} model.ResponseError
 // @Failure 500 {object} model.ResponseError
 // @Security ApiKeyAuth
@@ -81,4 +82,40 @@ func (s *server) getConsultationList(c echo.Context) error {
 	}
 
 	return c.JSON(http.StatusOK, tl)
+}
+
+// addConsultation записаться на консультацию
+// addConsultation godoc
+// @Summary записаться на консультацию
+// @Tags consultation
+// @Description записаться на консультацию
+// @Produce json
+// @Param	nadzor_organ_id	formData int true	"id надзорного органа" minimum(1)
+// @Param	control_type_id	formData int true	"id типа контроля" minimum(1)
+// @Param	consult_topic_id formData int true "id темы консультации" minimum(1)
+// @Param	user_id	formData int true	"id пользователя" minimum(1)
+// @Param	time formData string true	"время в формате '03:00'"
+// @Param	date formData string true	"дата в формате '2006-02-01'"
+// @Param	question formData string true	"вопрос в свободной форме"
+// @Param	is_need_letter formData bool true	"нужно ли письменное разъяснение"
+// @Success 201 {object} model.Consultation
+// @Failure 400 {object} model.ResponseError
+// @Failure 500 {object} model.ResponseError
+// @Security ApiKeyAuth
+// @Router /v1/consultation [post]
+func (s *server) addConsultation(c echo.Context) error {
+	cl := model.Consultation{}
+	if err := c.Bind(&cl); err != nil {
+		return echo.NewHTTPError(http.StatusInternalServerError, err.Error())
+	}
+	err := s.store.AddConsultation(c.Request().Context(), cl)
+	if err != nil {
+		log.Print(err)
+		if err == sql.ErrNoRows {
+			return sql.ErrNoRows
+		}
+		return echo.ErrInternalServerError
+	}
+
+	return c.JSON(http.StatusCreated, cl)
 }
