# internal/app/server/server.go
@@ -66,6 +66,7 @@ func (s *server) configureRouter() {
 				authGroup.GET("/typelist", s.getTypeList)
 				authGroup.GET("/slot", s.getSlotList)
 				authGroup.GET("/consultation", s.getConsultationList)
+				authGroup.POST("/consultation", s.addConsultation)
 			}
 		}
 	}
